@@ -336,6 +336,24 @@ Description: GNU C Library: Shared libraries [v9 optimized]
  Most notably, IBM's JDK. If you experience problems with such
  applications, you will need to remove this package.
 
+Package: libc6-sparcv9b
+Architecture: sparc
+Section: libs
+Priority: extra
+Pre-Depends: libc6 (= ${Source-Version})
+Description: GNU C Library: Shared libraries [v9b optimized]
+ Contains the standard libraries that are used by nearly all programs on
+ the system. This package includes shared versions of the standard C
+ library and the standard math library, as well as many others.
+ .
+ This set of libraries is optimized for the UltraSPARC v9b ABI. It only
+ needs to be installed on UltraSPARC machines. If you install this on a
+ non-UltraSPARC, it wont even be used.
+ .
+ WARNING: Some commercial programs do not work well with these libraries.
+ Most notably, IBM's JDK. If you experience problems with such
+ applications, you will need to remove this package.
+
 Package: libc6-i686
 Architecture: i386
 Section: libs
