@@ -53,6 +53,10 @@ glibc (2.3.2.ds1-12) unstable; urgency=low
     - Remove tabs from debian/changelog, since they confuse
       dpkg-parsechangelog.
 
+  * Ben Collins <bcollins@debian.org>
+
+    - Added and enabled a sparc v9b target (UltraSPARC III).
+
  -- Daniel Jacobowitz <dan@debian.org>  Mon, 26 Jan 2004 22:29:54 -0500
 
 glibc (2.3.2.ds1-11) unstable; urgency=low
